Made the plugin actually boot