@@ -1,6 +1,7 @@
 plugins {
     kotlin("jvm") version "2.2.10"
     kotlin("plugin.serialization") version "2.2.10"
+    id("io.papermc.paperweight.userdev") version "2.0.0-beta.18"
     id("com.gradleup.shadow") version "8.3.0"
     id("xyz.jpenilla.run-paper") version "2.3.1"
 }
@@ -19,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT")
+    paperweight.paperDevBundle("1.21.8-R0.1-SNAPSHOT")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 
     implementation(platform("com.aallam.openai:openai-client-bom:4.0.1"))
@@ -28,13 +29,16 @@ dependencies {
     implementation("com.aallam.ktoken:ktoken")
     runtimeOnly("io.ktor:ktor-client-okhttp")
 
+    // Force compatible Jackson versions
     implementation(platform("com.fasterxml.jackson:jackson-bom:2.19.2"))
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("com.fasterxml.jackson.core:jackson-databind")
+    implementation("com.fasterxml.jackson.core:jackson-core")
+    implementation("com.fasterxml.jackson.core:jackson-annotations")
 
     implementation("org.apache.lucene:lucene-core:10.2.2")
-    implementation("org.apache.lucene:lucene-analyzers-common:10.2.2")
-    implementation("org.apache.lucene:lucene-knn:10.2.2")
+    implementation("org.apache.lucene:lucene-analysis-common:10.2.2")
 
     compileOnly("me.clip:placeholderapi:2.11.6")
 }
@@ -42,16 +46,21 @@ dependencies {
 tasks {
     runServer {
         minecraftVersion("1.21.8")
+        jvmArgs("--add-modules", "jdk.incubator.vector")
+    }
+
+    build {
+        dependsOn("shadowJar")
+    }
+
+    shadowJar {
+        relocate("com.fasterxml.jackson", "dev.shiftsad.libs.jackson")
     }
 }
 
-val targetJavaVersion = 17
+val targetJavaVersion = 21
 kotlin {
     jvmToolchain(targetJavaVersion)
-}
-
-tasks.build {
-    dependsOn("shadowJar")
 }
 
 tasks.processResources {
